added req user decorator,optimzed db calls,added member add,invite
